@@ -1,3 +1,5 @@
+^Build\z
+^_build/
 ^blib.*
 ^fun\z
 ^gdl
